syntax = "proto3";

package proto;

option go_package = ".;proto";


message topRequest {
    int64 time = 1;
    string units = 2;
}


message topResponse {
    string ID = 1;
    double amount = 2;
}

service Services {
    rpc topCategory(topRequest) returns (stream topResponse);
    rpc topEmployee(topRequest) returns (stream topResponse);
}